# FlintUI

./: .gitignore  LICENSE  README.md  flintui-1.0.0.tgz  package.json  pyproject.toml  rename_win.ps1
.github/workflows/: ci-status.yml  deploy-develop.yml  deploy-main.yml  develop-to-main-pr.yml  flutter-ci.yml  go-ci.yml  python-ci.yml  react-ci.yml  rust-ci.yml  web-ci.yml
FOR_AGENTS/: WORKFLOW.md
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/data/: spec.ts
docs/src/layouts/: BaseLayout.astro
docs/src/pages/: index.astro
docs/src/pages/components/: index.astro
docs/src/styles/: global.css
tests/: conftest.py  test_badge.py  test_breadcrumb.py  test_button.py  test_card.py  test_core.py  test_toast.py  test_tokens.py
